[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/up_key.png" type="Texture" id=1]
[ext_resource path="res://montserrat_extrabold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/down_key.png" type="Texture" id=3]
[ext_resource path="res://Shaders/blur.shader" type="Shader" id=4]
[ext_resource path="res://NextButton/NextButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/back_small.png" type="Texture" id=6]
[ext_resource path="res://TutorialMenu/TutorialMenu.gd" type="Script" id=7]
[ext_resource path="res://SceneTransitionOut/SceneTransitionOut.tscn" type="PackedScene" id=8]
[ext_resource path="res://SceneTransition/SceneTransition.tscn" type="PackedScene" id=9]
[ext_resource path="res://Background/Background.tscn" type="PackedScene" id=10]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/blur_amount = 2.5

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 4
outline_color = Color( 0.266667, 0.192157, 0.2, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 48
outline_size = 4
outline_color = Color( 0.266667, 0.192157, 0.2, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 48
outline_size = 4
outline_color = Color( 0.266667, 0.192157, 0.2, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 48
outline_size = 4
outline_color = Color( 0.266667, 0.192157, 0.2, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 10 )]

[node name="Blur" type="ColorRect" parent="."]
visible = false
material = SubResource( 1 )
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -164.0
margin_right = -244.0
margin_bottom = -124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.225
margin_top = -163.913
margin_right = -174.225
margin_bottom = -123.913
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -299.538
margin_top = -68.8738
margin_right = -174.538
margin_bottom = -28.8738
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -299.538
margin_top = 28.7029
margin_right = -174.538
margin_bottom = 68.703
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -299.538
margin_top = 123.703
margin_right = -174.538
margin_bottom = 163.703
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="Button" parent="."]
modulate = Color( 0.266667, 0.192157, 0.2, 1 )
margin_left = 217.0
margin_top = 126.0
margin_right = 261.0
margin_bottom = 186.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
icon = ExtResource( 1 )
flat = true

[node name="Down" type="Button" parent="."]
modulate = Color( 0.266667, 0.192157, 0.2, 1 )
margin_left = 287.0
margin_top = 126.0
margin_right = 331.0
margin_bottom = 186.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="Label3" type="Label" parent="."]
margin_left = 357.0
margin_top = 126.0
margin_right = 702.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Set next floor"

[node name="Label" type="Label" parent="."]
margin_left = 217.0
margin_top = 232.0
margin_right = 333.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.266667, 0.192157, 0.2, 1 )
text = "SPACE"

[node name="Label2" type="Label" parent="."]
margin_left = 358.0
margin_top = 222.0
margin_right = 723.0
margin_bottom = 282.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Move Elevator"

[node name="Label4" type="Label" parent="."]
margin_left = 217.0
margin_top = 328.0
margin_right = 283.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.266667, 0.192157, 0.2, 1 )
text = "     F"

[node name="Label5" type="Label" parent="."]
margin_left = 357.0
margin_top = 319.0
margin_right = 812.0
margin_bottom = 379.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Toggle Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="."]
margin_left = 217.0
margin_top = 424.0
margin_right = 338.0
margin_bottom = 464.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.266667, 0.192157, 0.2, 1 )
text = "   ESC   "

[node name="Label7" type="Label" parent="."]
margin_left = 357.0
margin_top = 414.0
margin_right = 674.0
margin_bottom = 474.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Pause Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="." instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 1 )
margin_left = 0.0
margin_top = 0.0
margin_right = 76.0
margin_bottom = 70.0
icon = ExtResource( 6 )

[node name="SceneTransition" parent="." instance=ExtResource( 9 )]
visible = false

[node name="SceneTransitionExit" parent="." instance=ExtResource( 8 )]
visible = false
[connection signal="continue_clicked" from="BackButton" to="." method="_on_BackButton_clicked"]
[connection signal="scene_transition_exit_complete" from="SceneTransitionExit" to="." method="_on_SceneTransitionExit_complete"]
